tests/paczka1/fuzzy1/45553661.err
Error in line 2: YDikb A628 90,6
Error in line 1: S155 S155 68,4
Error in line 8: S155 A733 39,8
Error in line 9: S155 S155 52,0
Error in line 4: YDikb S155 63,2
Error in line 23: mfagFzB S155 93,1
Error in line 28: S155 S409 76,8
Error in line 25: mfagFzB S409 10,4
